blog/blog.css
body {
    font-family: Arial, Helvetica, sans-serif;
}
h1, h2 {
    font-family: 'Times New Roman', Times, serif;
    text-align: center;
}
nav a {
    color: #b30059;
}
.book h2 {
    color: #b30059;
    font-size: 1.5rem;
    margin: 20px;
}
nav ul {
    list-style: none;
}
nav a {
    text-decoration: none;
    font-weight: bold;
}
.main-nav {
    display: grid;
    grid-template-columns: 100px 100px 100px;
    justify-content: right;
}
hr {
    border: none;
    height: 1px;
    background-color: #ffc107;
}
.extra-line {
    margin: 30px 0;
}
.book {
    padding: 1rem;
    max-width: 700px;
    margin: 20px auto;
}
.book-data {
    font-weight:600; 
    display: grid;
    grid-template-rows: 30px 30px 30px 30px;
    justify-content: right;
    margin: auto 50px;
}
.book img {
    max-width: 35%;
    display: block;
    border-radius: 8px;
    margin: 0 auto;
}
#desc {
    grid-column: 1/3;
    margin: 20px 100px;
}
footer {
    text-align: center;
}
@media (min-width: 600px) {
    .book-data {
        justify-content: left;
    }
}

